force-app/main/default/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>End_Date__c &gt; TODAY()</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Too Less</fullName>
                </value>
                <value>
                    <fullName>Minimum</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Maximum</fullName>
                </value>
                <value>
                    <fullName>Too High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Website__c</fullName>
        <formula>Client__r.Website__c</formula>
        <label>Client Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deligated_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deligated Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe your project</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra_Expense__c</fullName>
        <label>Extra Expense</label>
        <summarizedField>Expense_report__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense_report__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense_report__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Bill_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Bill Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Milestone_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Milestone Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Cost__c</fullName>
        <label>Maintenance Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <label>PIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Budget__c</fullName>
        <formula>Budget__c  - Maintenance_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S1</fullName>
                </value>
                <value>
                    <fullName>S2</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>Sub Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SS1</fullName>
                </value>
                <value>
                    <fullName>SS2</fullName>
                </value>
                <value>
                    <fullName>SS3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_members__c</fullName>
        <label>Team members</label>
        <summaryForeignKey>Project_Team__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trans_No__c</fullName>
        <label>Trans. No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Fixed_Bid</fullName>
        <active>true</active>
        <label>Fixed Bid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mini_Project</fullName>
        <active>true</active>
        <label>Mini Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Project</fullName>
        <active>true</active>
        <label>Support Project</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Budget_validation</fullName>
        <active>false</active>
        <errorConditionFormula>OR((Budget__c &lt;10000 &amp;&amp;   TEXT( Category__c ) &lt;&gt; &quot;Minimum&quot;),(Budget__c &gt;=10000 &amp;&amp;  Budget__c &lt;=30000 &amp;&amp;  TEXT( Category__c ) &lt;&gt; &quot;Intermediate&quot;),
( Budget__c &gt;30000 &amp;&amp;  TEXT( Category__c ) &lt;&gt; &quot;Maximum&quot; ))</errorConditionFormula>
        <errorMessage>If Budget is less than 10k, category should be &quot;Minimum&quot;.
If Budget&gt;=10k and Budget&lt;=30k, category should be &quot;Intermediate&quot;.
If Budget &gt;30k, category should be &quot;Maximum&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_validation</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT( Client__r.Country__c )  &lt;&gt;  TEXT( Country__c )</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Client&apos;s country must be equal to project&apos;s country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_validation</fullName>
        <active>false</active>
        <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
        <errorDisplayField>Budget__c</errorDisplayField>
        <errorMessage>End date must b greater than start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maintenance_cost_validation</fullName>
        <active>false</active>
        <errorConditionFormula>PRIORVALUE( Maintenance_Cost__c ) &gt; Maintenance_Cost__c</errorConditionFormula>
        <errorDisplayField>Maintenance_Cost__c</errorDisplayField>
        <errorMessage>Maintenance cost cannot be decreased.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_budget_validation</fullName>
        <active>false</active>
        <errorConditionFormula>Budget__c &lt;10000</errorConditionFormula>
        <errorDisplayField>Budget__c</errorDisplayField>
        <errorMessage>Project budget can not be less than 10k</errorMessage>
    </validationRules>
</CustomObject>